--- a/source/shadow/CMakeLists.txt
+++ b/source/shadow/CMakeLists.txt
@@ -39,9 +39,8 @@ set(_HEADER_FILES
     "${_SHADOW_INCLUDE_DIR}/shadowMatrixComputation.h"
 )
 
-# Define the library.
-# NOTE: OBJECT is used so that the parent library contain the contents of this one.
-add_library(${_TARGET} OBJECT
+# All private libraries are static by default to hide them within a public library.
+add_library(${_TARGET} STATIC
     ${_SOURCE_FILES}
     ${_HEADER_FILES}
 )
@@ -49,6 +48,7 @@ add_library(${_TARGET} OBJECT
 # Set the required include directories for the library.
 target_include_directories(${_TARGET}
     PUBLIC
+        "${_HVT_INCLUDE_DIR}"
         "${_SHADOW_INCLUDE_DIR}"
         "${PXR_INCLUDE_DIRS}"
 )
