--- a/source/tasks/CMakeLists.txt
+++ b/source/tasks/CMakeLists.txt
@@ -66,5 +66,5 @@ target_include_directories(${_TARGET}
         "${PXR_INCLUDE_DIRS}"
         "${_PYTHON3_INCLUDE_DIR}"
     PRIVATE
-        "${CMAKE_SOURCE_DIR}" # Access to source/utils headers.
+        "${_HVT_SOURCE_DIR}" # Access to private headers.
 )
